--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
 
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <title>Aku Sayang Kamu</title>
+  <title>Buat Ayangku Zahra <3</title>
 
 
 
